# lightweight

./: .gitignore  README.md  pyproject.toml  shell.nix
configs/: sweep.yaml  test.yaml  train.yaml
lightweight/: __init__.py  dispatcher.py
lightweight/callbacks/: __init__.py  callback.py
lightweight/data/: datamodule.py
lightweight/models/: __init__.py  model.py
tests/: conftest.py  test_callback.py  test_datapipeline.py  test_model.py
