[tool.poetry]
name = "lightweight"
version = "0.1.0"
description = ""
authors = ["bileamScheuvens <benedictbileam@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lightning = "^2.3.3"
scipy = "^1.14.0"
wandb = "^0.17.5"
scikit-learn = "^1.5.1"
pytest = "^8.3.2"
pytorch-lightning = "^2.4"


[tool.poetry.scripts]
train = 'lightweight:train'
train_offline = 'lightweight:train_offline'
sweep = 'lightweight:sweep'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

